--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+---
+layout: default
+title: Hank Quinlan, Horrible Cop
+---
+<div class="blurb">
+     	<h1>Hi there!</h1>
+	<p>Welcome to <em>Tracia Labs</em> ! <a href="/about">Read more about us...</a></p>
+</div><!-- /.blurb -->
+
 <!DOCTYPE html>
 <html>
 	<head>
