--- a/index.html
+++ b/index.html
@@ -1,40 +1,10 @@
 ---
 layout: default
-title: Hank Quinlan, Horrible Cop
+title: TraCiA Lab
 ---
 <div class="blurb">
      	<h1>Hi there!</h1>
 	<p>Welcome to <em>Tracia Labs</em> ! <a href="/about">Read more about us...</a></p>
 </div><!-- /.blurb -->
 
-<!DOCTYPE html>
-<html>
-	<head>
-		<title>Tracia Labs</title>
-		<!-- link to main stylesheet -->
-		<link rel="stylesheet" type="text/css" href="/css/main.css">
-	</head>
-	<body>
-		<nav>
-    		<ul>
-        		<li><a href="/">Home</a></li>
-	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">App</a></li>
-        		<li><a href="/blog">Blog</a></li>
-    		</ul>
-		</nav>
-		<div class="container">
-    		<div class="blurb">
-        		<h1>Hi there!</h1>
-				<p>Welcome to <em>Tracia Labs</em> Enjoy! <a href="/about">Read more about us...</a></p>
-    		</div><!-- /.blurb -->
-		</div><!-- /.container -->
-		<footer>
-    		<ul>
-        		<li><a href="mailto:tracialabs@gmail.com">email</a></li>
-        		<li><a href="https://github.com/tracialab">github.com/tracialab</a></li>
-			</ul>
-		</footer>
-	</body>
-</html>
-4
+
