--- a/about/index.html
+++ b/about/index.html
@@ -3,7 +3,8 @@ layout: default
 title: About TraCiA Labs
 ---
 <div class="blurb">
-	<h1>We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics</h1>
+	<h1>About TraCiA Labs</h1>
+	<h2><em> We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics</em></h2>
 	<p>We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning travel more convenient, social, and environmentally sustainable. 
   Traveling brings people together and make us appreciate one another and our natural environment.</p>
 </div><!-- /.blurb -->
