--- a/about/index.html
+++ b/about/index.html
@@ -5,6 +5,5 @@ title: About TraCiA Labs
 <div class="blurb">
 	<h1>About TraCiA Labs</h1>
 	<h2><em> We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics</em></h2>
-	<p>We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning a trip more convenient, social, and environmentally sustainable. 
-  Traveling brings people together and make us appreciate one another and our natural environment.</p>
+	<p>We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning a trip more convenient, social, and environmentally sustainable. </p>
 </div><!-- /.blurb -->
