--- a/index.html
+++ b/index.html
@@ -3,8 +3,19 @@ layout: default
 title: TraCiA Lab
 ---
 <div class="blurb">
+    
      	<h1>Hi there!</h1>
-	<p>Welcome to <em>Tracia Labs</em> ! <a href="/about">Read more about us...</a></p>
+	<p class="welcome">Welcome to <em>Tracia Labs</em> ! <a href="/about">Read more about us...</a>
+    </p>
+    
+
 </div><!-- /.blurb -->
 
 
+<style>
+    .tac{
+        text-align: center;
+    }
+
+
+</style>
