--- a/about/index.html
+++ b/about/index.html
@@ -2,8 +2,12 @@
 layout: default
 title: About TraCiA Labs
 ---
+<body>
 <div class="blurb">
-	<h1>About TraCiA Labs</h1>
-	<h2><em> We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics</em></h2>
-	<p>We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning a trip more convenient, social, and environmentally sustainable. </p>
+	<h1 class="about">About TraCiA Labs</h1>
+    <div class="aboutborder">
+	<h2>We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics.</h2>
+        </div>
+	<p class="aboutp">We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning a trip more convenient, social, and environmentally sustainable. </p>
 </div><!-- /.blurb -->
+</body>
