--- a/app/index.html
+++ b/app/index.html
@@ -2,6 +2,9 @@
 layout: default
 title: TraCiA App
 ---
+<p>
+<img class="people" src="../assets/photos/people.png">
+</p>
 <div class="blurb">
 	<h1>TraCiA App</h1>
 	<p>Our app will be launched in October 2018. Stay tuned!</p>
@@ -9,7 +12,7 @@ title: TraCiA App
 <style>
         
             body{
-                background-image:url("https://farm2.staticflickr.com/1788/43244804312_5a38dae59d_o.jpg");
+                background-color:black;
             }
             
         </style>
