Minor edits in index.html

--- a/about/index.html
+++ b/about/index.html
@@ -9,7 +9,7 @@ title: About TraCiA Labs
 <div class="blurb">
 	<h1 class="about">About TraCiA Labs</h1>
     <div class="aboutborder">
-	<h2>We transform the way people travel using advanced Travel Concierge, Intelligent System, and Analytics.</h2>
+	<h2>We transform the way people travel using online Travel Concierge, Intelligent System, and Analytics.</h2>
         </div>
 	<p>We are a group of tech entrepreneurs who are avid travellers and love to use the latest technology to make planning a trip more convenient, social, and environmentally sustainable. </p>
    
