Updated the launch date and added prototype link

--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,9 @@ title: TraCiA App
 <img class="people" src="../assets/photos/people.png">
 </p>
 <div class="blurb">
-	<h1>TraCiA App</h1>
-	<p>Our app will be launched in October 2018. Stay tuned!</p>
+	<h1>TraCiA App: EzeeGo</h1>
+	<p>Our app will be launched in December 2018. Stay tuned!</p>
+	<p>For the meantime, check out <a href="https://xd.adobe.com/view/78a25912-8b72-4c6d-43fc-bd6c3d8e4abb-0e93/">our UI design prototype.</a></p>
 </div><!-- /.blurb -->
 <style>
         
