--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,7 @@ title: TraCiA App
 <div class="blurb">
 	<h1>TraCiA App: EzeeGo</h1>
 	<p>Our app will be launched in December 2018. Stay tuned!</p>
-	<p>For the meantime, check out <a href="https://xd.adobe.com/view/78a25912-8b72-4c6d-43fc-bd6c3d8e4abb-0e93/">our UI design prototype.</a></p>
+	<p>For the meantime, check out <a href="https://xd.adobe.com/view/78a25912-8b72-4c6d-43fc-bd6c3d8e4abb-0e93/" target="_blank">our UI design prototype.</a></p>
 </div><!-- /.blurb -->
 <style>
         
